# Rust-API-Project

./: README.md
backend/: .gitignore  Cargo.toml
backend/rusthttp/: Cargo.toml  README.md
backend/rusthttp/examples/: basic_server.rs
backend/rusthttp/src/: lib.rs  request.rs  response.rs  router.rs  server.rs
backend/src/: main.rs
backend/src/app/: mod.rs  models.rs  storage.rs
backend/src/http/: mod.rs  request.rs  response.rs  router.rs  server.rs
backend/src/util/: json.rs  mod.rs
frontend/: .gitignore  app.js  index.html  styles.css
